WIP (commit after 5 months of inactivity)

--- a/templates/default/_header.html.twig
+++ b/templates/default/_header.html.twig
@@ -35,6 +35,10 @@
                                     </span>
                                 {% endif %}
                             </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{{ path("external_image_list") }}">
+                                Images
+                            </a>
                             {% if is_granted("ROLE_ADMIN") %}
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path("admin_index") }}">
